@@ -1,3 +1,8 @@
+2005-07-20  Mark Mitchell  <mark@codesourcery.com>
+
+	* qm/test/doc/reference.xml: Add documentation about
+	prerequisites.
+
 2005-07-19  Mark Mitchell  <mark@codesourcery.com>
 
 	* qm/test/execution_engine.py (ExecutionEngine.__AddTestToStack):
